# mechanum_robot

./: cmds
call_clear_costmap_srv/: CMakeLists.txt  package.xml
call_clear_costmap_srv/launch/: call_clear_costmap_srv.launch
call_clear_costmap_srv/src/: call_clear_costmap_srv_main.cpp
client_camera/: CMakeLists.txt  package.xml
client_camera/src/: client.py
cmd_vel_publisher/: CMakeLists.txt
cmd_vel_publisher/launch/: cmd_vel_publisher.launch  cmd_vel_publisher_diff.launch  cmd_vel_publisher_take_over.launch
cmd_vel_publisher/src/: cmd_vel_publisher.cpp  cmd_vel_publisher_diff.cpp  cmd_vel_publisher_take_over.cpp
hector_mapping/launch/: 306_map.launch  mapping_default.launch
laser_crop/: CMakeLists.txt  package.xml
laser_crop/launch/: laser_crop.launch
laser_crop/src/: laser_crop_main.cpp
laser_footprint_filer/: CMakeLists.txt  package.xml
laser_footprint_filer/launch/: laser_footprint_filter.launch
laser_footprint_filer/src/: laser_footprint_filter_main (copy).cpp  laser_footprint_filter_main.cpp
map/: view_navi.rviz
mechanum_common/: CMakeLists.txt  package.xml
mechanum_common/config/move_base/: base_local_planner_params.yaml  base_local_planner_params_ly.yaml  costmap_common_params.yaml  costmap_common_params_ly.yaml  global_costmap_params.yaml  global_costmap_params_ly.yaml  global_planner_params.yaml  local_costmap_params.yaml  local_costmap_params_ly.yaml  move_base_params.yaml
mechanum_common/config/move_base/bak/: base_local_planner_params_ly.yaml  costmap_common_params_ly.yaml  global_costmap_params_ly.yaml  local_costmap_params_ly.yaml
mechanum_common/launch/: hardware.launch  hardware_test.launch  hardware_with_filters.launch  mapserver.launch  mechanum_amcl.launch  mechanum_amcl_306.launch  mechanum_amcl_diff.launch  mechanum_gmapping.launch  move_base.launch  move_base_306.launch  navigation_all.launch  navigation_all_306.launch  navigation_all_309.launch  navigation_all_my_planner.launch  navigation_all_my_planner_12_test.launch  navigation_all_my_planner_13_test.launch  navigation_all_my_planner_13_test_odom_from_cmd_vel.launch  navigation_all_my_planner_13_test_odom_from_hector_mapping.launch  navigation_all_my_planner_14_test.launch  navigation_all_my_planner_15_test_pid.launch  navigation_all_my_planner_16_test_pid.launch  navigation_all_my_planner_17_test_pid.launch  navigation_all_my_planner_change_topic.launch
mechanum_common/map/: 306_2.pgm  306_2.yaml  309_1.pgm  309_1.yaml  m1.pgm  m1.yaml  m4.pgm  m4.yaml  mechanum_map.pgm  mechanum_map.yaml  mechanum_map2.pgm  mechanum_map2.yaml  mechanum_robot1.pgm  mechanum_robot1.yaml
mechanum_common/scripts/: odomtransformer.py
mechanum_common/urdf/: mechanum_robot.urdf
mechanum_control_odom/: CMakeLists.txt  package.xml
mechanum_control_odom/launch/: OdomTest.launch  mechanum_control_odom.launch  mechanum_control_odom_combined.launch  mechanum_control_odom_combined_average_filter.launch  mechanum_control_odom_odom.launch
mechanum_control_odom/rviz/: mechanum_odom.rviz
mechanum_control_odom/src/: SerialPort.cpp  SerialPort.h  mechanum_control.cpp  mechanum_control_odom_average_filter.cpp  mechanum_control_odom_main.cpp  mechanum_control_odom_main1.cpp  mechanum_control_odom_main2.cpp  mechanum_control_odom_main3.cpp  mechanum_control_odom_median_filter.cpp  mechanum_control_odom_tf_main.cpp  odom_test.cpp
my_planner/: CMakeLists.txt  package.xml
my_planner/launch/: my_planner.launch  my_planner10.launch  my_planner11.launch  my_planner12_test.launch  my_planner13_test.launch  my_planner14_test.launch  my_planner15_test_test_pid.launch  my_planner16_test_test_pid.launch  my_planner17_test_test_pid.launch  my_planner2.launch  my_planner3.launch  my_planner4.launch  my_planner4_p.launch  my_planner5.launch  my_planner6.launch  my_planner7.launch  my_planner8.launch  my_planner9.launch  my_planner_change_topic.launch  waypoints.yaml  waypoints_and_connections.yaml
my_planner/src/: PID_Beta7.cpp  PID_Beta7.h  my_planner_change_topic_main.cpp  my_planner_main.cpp  my_planner_main1.cpp  my_planner_main10.cpp  my_planner_main11 (copy).cpp  my_planner_main11.cpp  my_planner_main12_test.cpp  my_planner_main13_test.cpp  my_planner_main14_test.cpp  my_planner_main15_test_pid.cpp  my_planner_main16_test_pid_boost.cpp  my_planner_main17_test_pid.cpp  my_planner_main2.cpp  my_planner_main3.cpp  my_planner_main4.cpp  my_planner_main4_p.cpp  my_planner_main5.cpp  my_planner_main6.cpp  my_planner_main7.cpp  my_planner_main8.cpp  my_planner_main9.cpp  possible bugs in main5  version_record.txt
obtain_plan/: CMakeLists.txt  package.xml
obtain_plan/launch/: obtain_plan.launch
obtain_plan/src/: obtain_plan_main.cpp
odom_from_cmd_vel/: CMakeLists.txt  package.xml
odom_from_cmd_vel/launch/: test_odom_from_cmd_vel.launch
odom_from_cmd_vel/src/: odom_from_cmd_vel_main.cpp
rplidar_ros/launch/: ShadowFilter.yaml  rplidar.launch  rplidar_with_filters.launch  test.launch
rplidar_ros/src/: node.cpp
test_306/: 306_1.yaml  mechanum_amcl_306.launch  move_base_306.launch
